vcluster_versioned_docs/version-0.36.0/_partials/config/sync/toHost/pods.mdx

<details className="config-field" data-expandable="true">
<summary>

## `pods` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods}

Pods defines if pods created within the virtual cluster should get synced to the host cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#pods-enabled}

Enabled defines if pod syncing should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `translateImage` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#pods-translateImage}

TranslateImage maps an image to another image that should be used instead. For example this can be used to rewrite
a certain image that is used within the virtual cluster to be another image on the host cluster

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `enforceTolerations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#pods-enforceTolerations}

EnforceTolerations will add the specified tolerations to all pods synced by the virtual cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `useSecretsForSATokens` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#pods-useSecretsForSATokens}

UseSecretsForSATokens will use secrets to save the generated service account tokens by virtual cluster instead of using a
pod annotation.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `runtimeClassName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-runtimeClassName}

RuntimeClassName is the runtime class to set for synced pods.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `priorityClassName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-priorityClassName}

PriorityClassName is the priority class to set for synced pods.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `rewriteHosts` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-rewriteHosts}

RewriteHosts is a special option needed to rewrite statefulset containers to allow the correct FQDN. virtual cluster will add
a small container to each stateful set pod that will initially rewrite the /etc/hosts file to match the FQDN expected by
the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#pods-rewriteHosts-enabled}

Enabled specifies if rewriting stateful set pods should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `initContainer` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer}

InitContainer holds extra options for the init container used by vCluster to rewrite the FQDN for stateful set pods.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `image` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer-image}

Image is the image virtual cluster should use to rewrite this FQDN.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `registry` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default">mirror.gcr.io</span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer-image-registry}

Registry is the registry of the container image, e.g. my-registry.com or ghcr.io. This setting can be globally
overridden via the controlPlane.advanced.defaultImageRegistry option. Empty means docker hub.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default">library/alpine</span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer-image-repository}

Repository is the repository of the container image, e.g. my-repo/my-image

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tag` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default">3.20</span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer-image-tag}

Tag is the tag of the container image, and is the default version.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer-resources}

Resources are the resources that should be assigned to the init container for each stateful set init container.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `limits` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:30m memory:64Mi&#93;</span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer-resources-limits}

Limits are resource limits for the container

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `requests` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:30m memory:64Mi&#93;</span> <span className="config-field-enum"></span> {#pods-rewriteHosts-initContainer-resources-requests}

Requests are minimal resources that will be consumed by the container

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `patches` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches}

Patches patch the resource according to the provided specification.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `path` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-path}

Path is the path within the patch to target. If the path is not found within the patch, the patch is not applied.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `expression` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-expression}

Expression transforms the value according to the given JavaScript expression.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `reverseExpression` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reverseExpression}

ReverseExpression transforms the value according to the given JavaScript expression.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `reference` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reference}

Reference treats the path value as a reference to another object and will rewrite it based on the chosen mode
automatically. In single-namespace mode this will translate the name to "vxxxxxxxxx" to avoid conflicts with
other names, in multi-namespace mode this will not translate the name.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersion` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reference-apiVersion}

APIVersion is the apiVersion of the referenced object.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersionPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reference-apiVersionPath}

APIVersionPath is optional relative path to use to determine the kind. If APIVersionPath is not found, will fallback to apiVersion.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reference-kind}

Kind is the kind of the referenced object.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kindPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reference-kindPath}

KindPath is the optional relative path to use to determine the kind. If KindPath is not found, will fallback to kind.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namePath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reference-namePath}

NamePath is the optional relative path to the reference name within the object.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespacePath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-reference-namespacePath}

NamespacePath is the optional relative path to the reference namespace within the object. If omitted or not found, namespacePath equals to the
metadata.namespace path of the object.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-patches-labels}

Labels treats the path value as a labels selector.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `hybridScheduling` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#pods-hybridScheduling}

HybridScheduling is used to enable and configure hybrid scheduling for pods in the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#pods-hybridScheduling-enabled}

Enabled specifies if hybrid scheduling is enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `hostSchedulers` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#pods-hybridScheduling-hostSchedulers}

HostSchedulers is a list of schedulers that are deployed on the host cluster.

</summary>



</details>


</details>


</details>
